--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -129,6 +129,7 @@
   z-index: 1000;
   display: flex;
   justify-content: center;
+  gap: 1.2rem;
 }
 
 .bottom-nav-inner {
