--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -16,7 +16,7 @@
   align-items: center;
   width: 100%;
   padding-top: 120px;
-  margin-bottom: 32px;
+  margin-bottom: 25px;
 }
 
 .header-left {
@@ -57,4 +57,8 @@
   border-color: #111827;
   background: #111827;
   color: white;
+}
+
+.dashboard-subtitle {
+  padding-top: 0.3rem;
 }
